add classes and styles

--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
   <body>
     <header>
       <img src="./assets/logo batman.png" alt="profile photo batman" />
-      <h1 class="header-title uppercase">
+      <h1 class="header-title heading">
         C U R R I C U L U M V I T A E D E B R U C E W A Y N E
       </h1>
     </header>
     <main>
       <section>
-        <h2 class="uppercase section-title">Datos Personales</h2>
-        <ul>
-          <li><span>Nombre completo:</span><span> Bruce Wayne</span></li>
-          <li><span>Fecha de nacimiento:</span><span> 01/05/1939</span></li>
-          <li><span>Lugar de nacimiento: </span><span>Gotham City</span></li>
+        <h2 class="heading section-title">D A T O S P E R S O N A L E S</h2>
+        <ul class="personal-info">
+          <li>
+            <span class="data">Nombre completo:</span><span> Bruce Wayne</span>
+          </li>
+          <li>
+            <span class="data">Fecha de nacimiento:</span
+            ><span> 01/05/1939</span>
+          </li>
+          <li>
+            <span class="data">Lugar de nacimiento: </span
+            ><span>Gotham City</span>
+          </li>
         </ul>
       </section>
       <section>
-        <h2 class="uppercase section-title">
+        <h2 class="heading section-title">
           F O R M A C I Ó N A C A D É M I C A
         </h2>
         <div class="container-details">
-          <p>1956-1961:</p>
+          <p class="date">1956-1961:</p>
           <div>
             <p>Universidad del espantapájaros</p>
             <p>Licenciatura en aeronaútica</p>
           </div>
         </div>
         <div class="container-details">
-          <p>1952-1956:</p>
+          <p class="date">1952-1956:</p>
           <div>
             <p>Secundario Gotham</p>
             <p>Bachiller con especialización en trucos</p>
@@ -42,18 +50,18 @@
         </div>
       </section>
       <section>
-        <h2 class="uppercase section-title">
+        <h2 class="heading section-title">
           E X P E R I E N C I A L A B O R A L
         </h2>
         <div class="container-details">
-          <p>1975-1985:</p>
+          <p class="date">1975-1985:</p>
           <div>
             <p>Desocupado</p>
             <p>Sin trabajo porquer se me rompió el batimovil</p>
           </div>
         </div>
         <div class="container-details">
-          <p>1965-1975:</p>
+          <p class="date">1965-1975:</p>
           <div>
             <p>Cazavillanos y demás chusma</p>
             <p>
@@ -63,7 +71,7 @@
           </div>
         </div>
         <div class="container-details">
-          <p>1962-1965:</p>
+          <p class="date">1962-1965:</p>
           <div>
             <p>Aprendiz de superhéroes</p>
             <p>
@@ -76,8 +84,10 @@
     </main>
     <footer>
       <span>0810 - BATMAN</span>
-      <img src="./assets/ico_instagram.png" alt="link" />
-      <img src="./assets/ico_linkedin.png" alt="linkedin link" />
+      <a href="#"><img src="./assets/ico_instagram.png" alt="link" /></a
+      ><a href="#">
+        <img src="./assets/ico_linkedin.png" alt="linkedin link"
+      /></a>
     </footer>
   </body>
 </html>
